--- a/html/style.css
+++ b/html/style.css
@@ -11,6 +11,10 @@ body, h1, h2, hr, ul, p {
     margin: 0;
 }
 
+p {
+    font-weight: 500;
+}
+
 main {
     max-width: 924px;
     margin: 62px auto 98px;
@@ -61,4 +65,136 @@ li {
 hr {
     border-style: solid;
     border-bottom-width: 0;
+}
+
+.right {
+    text-align: right;
+}
+
+#image {
+    display: flex;
+    flex-direction: row;
+    gap: 28px;
+}
+
+#image > p {
+    flex: 1;
+    font-size: 20px;
+    font-family: Pretendard;
+    font-weight: 500;
+    line-height: 140%;
+    letter-spacing: -0.1px;
+}
+
+#favoriteimage {
+    width: 264px;
+    height: 264px;
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+#favoriteimage > img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;;
+}
+
+.imagewhithcaption {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+}
+
+.imagewhithcaption > p {
+    color: #808080;
+    font-size: 16px;
+    ine-height: 140%;
+    letter-spacing: -0.08px;
+}
+
+.center {
+    text-align: center;
+}
+
+#musicplayer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#musictitle {
+    font-weight: 700;
+    line-height: 140%;
+    letter-spacing: -0.1px;
+}
+
+#artist {
+    font-size: 16px;
+    line-height: 140%;
+    letter-spacing: -0.08px;
+    margin: 4px 0 24px;
+}
+
+#lyric {
+    color: #555;
+    text-align: center;
+    font-size: 18px;
+    line-height: 160%;
+    letter-spacing: -0.09px;
+    margin-top: 30px;
+}
+
+#lyric > span {
+    display: block;
+}
+
+#lyric > span:nth-child(2) {
+    font-size: 20px;
+    font-family: 600;
+    color: white;
+}
+
+#musiccontainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#musiccontainer > p {
+    font-size: 20px;
+    line-height: 140%;
+    letter-spacing: -0.1px;
+}
+
+#streamingservice {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#streamingservice > p {
+    font-size: 24px;
+    line-height: 140%;
+    letter-spacing: -0.12px;
+    margin-top: 16px;
+}
+
+#streamingservice img {
+    opacity: 0.4;
+    transition: 0.3s;
+}
+
+#streamingservice img:hover {
+    opacity: 1;
+}
+
+#footer {
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 140%;
+    letter-spacing: -0.09px;
+    margin-top: 60px;
 }
