--- a/instagramPage/style.css
+++ b/instagramPage/style.css
@@ -13,12 +13,15 @@ main {
     margin-top: 18px;
 }
 
-#header > input {
+input {
     border: 0px;
     width: 268px;
     height: 36px;
     border-radius: 8px;
     background-color: #EFEFEF;
+    font-family: Noto Sans KR;
+    font-size: 14px;
+    font-weight: 300;
 }
 
 hr {
@@ -56,23 +59,44 @@ hr {
     height: 104px;
 }
 
+#userId {
+    font-family: Noto Sans KR;
+    font-size: 24px;
+    font-weight: 500;
+}
+
 button {
     border: 0px;
     width: 68px;
     height: 32px;
     border-radius: 4px;
     background-color: #EFEFEF;
+    font-family: Noto Sans KR;
+    font-size: 13px;
+    font-weight: 500;
 }
 
 #accountCounts {
     display: flex;
     justify-content: space-between;
+    font-family: Noto Sans KR;
+    font-size: 13px;
+    font-weight: 500;
+}
+
+#userName {
+    font-family: Noto Sans KR;
+font-size: 13px;
+font-weight: 700;
 }
 
 #buttons {
     display: flex;
     justify-content: space-evenly;
     color: #9E9E9E;
+    font-family: Noto Sans KR;
+    font-size: 12px;
+    font-weight: 500;
 }
 
 #imgs > img {
