--- a/instagramPage/style.css
+++ b/instagramPage/style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     background-color: #ffffff;
-    font-family: Noto Sans KR;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 main {
