--- a/instagramPage/style.css
+++ b/instagramPage/style.css
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+@import url('https://fonts.googleapis.com/earlyaccess/notosanskr.css');
 
 body {
     margin: 0;
@@ -18,6 +18,8 @@ header {
 .headerSummary {
     display: flex;
     flex-direction: row;
+    max-width: 936px;
+    margin: 0 auto;
 }
 
 header img {
@@ -25,7 +27,6 @@ header img {
     height: 29px;
     margin-top: 18px;
     margin-bottom: 13px;
-    margin-left: 252px;
 }
 
 .search {
@@ -120,13 +121,18 @@ input:focus {
     margin-top: 0px;
 }
 
-.buttonGroup {
+.buttonGroupWrapper {
     width: 936px;
     height: 30px;
     border-top: 1px solid #DBDBDB;
+    margin-bottom: 42px;
+}
+
+.buttonGroup {
+    max-width: 392px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 42px;
 }
 
 .buttonGroup button {
@@ -138,18 +144,10 @@ input:focus {
     padding-top: 16px;
 }
 
-.post {
+.buttonGroup > .activeButton {
     margin-top: -1px;
     border-top: 1px solid #000000;
-    margin-left: 286px;
-}
-
-.post > button {
     color: #000000;
-}
-
-.tagged {
-    margin-right: 286px;
 }
 
 .imgs {
